// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Probando componente <GifGrid /> Debe de mostrar el componente correctamente 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
     
    pandas
     
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    Cargando...
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;

exports[`Probando componente <GifGrid /> debe mostrar item cuando se carga imagenes useFetchGifs 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
     
    pandas
     
  </h3>
  <div
    className="card-grid"
  >
    <GridGifItem
      id="ABC"
      key="ABC"
      title="alex"
      url="https://alex/alex.jpg"
    />
    <GridGifItem
      id="ABCDE"
      key="ABCDE"
      title="alex"
      url="https://alex/alex.jpg"
    />
  </div>
</Fragment>
`;
